@@ -2,6 +2,7 @@
 TITLE.text=Mogwai ER-Designer NG
 NEWMODEL.icon=/de/erdesignerng/icons/new.png
 SAVEMODEL.icon=/de/erdesignerng/icons/script_save.png
+SAVEMODELAS.icon=/de/erdesignerng/icons/script_save.png
 SAVEMODELTODB.icon=/de/erdesignerng/icons/script_save.png
 LOADMODELFROMDB.icon=/de/erdesignerng/icons/folder.png
 LOADMODEL.icon=/de/erdesignerng/icons/folder.png
@@ -34,7 +35,8 @@ DELETEONLYICON.icon=/de/erdesignerng/icons/delete.png
 FILE.text=File
 RECENTLYUSEDFILES.text=Recently used files
 NEWMODEL.text=New model
-SAVEMODEL.text=Save model...
+SAVEMODEL.text=Save model
+SAVEMODELAS.text=Save model as...
 SAVEMODELTODB.text=Save model to repository...
 LOADMODELFROMDB.text=Load model from repository...
 LOADMODEL.text=Load model...
