@@ -2,7 +2,8 @@
 FILE.text=Datei
 RECENTLYUSEDFILES.text=Zuletzt benutzte Dateien
 NEWMODEL.text=Neues Modell
-SAVEMODEL.text=Modell speichern...
+SAVEMODEL.text=Modell speichern
+SAVEMODELAS.text=Modell speichern als...
 SAVEMODELTODB.text=Modell in Repository speichern...
 LOADMODELFROMDB.text=Modell aus Repository laden...
 LOADMODEL.text=Modell laden...
